--- a/index.html
+++ b/index.html
@@ -76,27 +76,28 @@
             <div class="skill-category">
                 <h3>Frontend Development</h3>
                 <ul class="skill-list">
-                    <li>JavaScript <div class="skill-level" style="--level: 90%"></div></li>
-                    <li>React <div class="skill-level" style="--level: 85%"></div></li>
-                    <li>CSS <div class="skill-level" style="--level: 90%"></div></li>
-                    <li>TypeScript <div class="skill-level" style="--level: 80%"></div></li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>CSS</li>
+                    <li>HTML</li>
                 </ul>
             </div>
             <div class="skill-category">
                 <h3>Backend Development</h3>
                 <ul class="skill-list">
-                    <li>Node.js <div class="skill-level" style="--level: 80%"></div></li>
-                    <li>Python <div class="skill-level" style="--level: 75%"></div></li>
-                    <li>MySQL <div class="skill-level" style="--level: 65%"></div></li>
-                    <li>Java <div class="skill-level" style="--level: 80%"></div></li>
-                    <li>C# <div class="skill-level" style="--level: 70%"></div></li>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>C#</li>
+                    <li>MySQL</li>
+                    <li>FIREBASE</li>
+                    <li>Node.js</li>
                 </ul>
             </div>
             <div class="skill-category">
                 <h3>Design & Tools</h3>
                 <ul class="skill-list">
-                    <li>Figma <div class="skill-level" style="--level: 85%"></div></li>
-                    <li>Git <div class="skill-level" style="--level: 90%"></div></li>
+                    <li>Figma</li>
+                    <li>Git</li>
                 </ul>
             </div>
         </div>
